expanding card gagal

--- a/firstApp/src/app/app.component.html
+++ b/firstApp/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Direct Message</ion-list-header>
-          <ion-note>fahmi&#64;yeahhitsme.com</ion-note>
+          <ion-list-header>Inbox</ion-list-header>
+          <ion-note>hi&#64;ionicframework.com</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
