--- a/firstApp/src/app/folder/folder.page.html
+++ b/firstApp/src/app/folder/folder.page.html
@@ -15,39 +15,32 @@
   </ion-header>
 
   <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Hit Me at <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/sunbreathingg_">sunbreathingg_</a></p>
-    <div id="card">
-      <ion-card (click)="openModal()">
+    <div id="info-card">
+      <ion-card>
+        <img src="assets\img\profil.jpg" alt="Avatar" class="profile-pic" />
         <ion-card-header>
-          <ion-img src="assets/img/H1D022040.jpeg"></ion-img>
-          <ion-card-subtitle>Fahmi</ion-card-subtitle>
+          <ion-card-title>Abdul Aziz Fahmi 'Alauddin</ion-card-title>
+          <ion-card-subtitle>H1D022040</ion-card-subtitle>
         </ion-card-header>
+        <ion-card-content>
+          <p>Check out my Instagram!</p>
+          <ion-button size="small" expand="block" color="secondary" href="https://instagram.com/sunbreathingg_" target="_blank">
+            <ion-icon name="logo-instagram" slot="start"></ion-icon>
+            Visit Instagram
+          </ion-button>
+        </ion-card-content>
+      </ion-card>
+    </div>
+
+    <div id="extras">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>About Me</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          I am an outdoor enthusiast who loves exploring nature and engaging in various activities that the great outdoors has to offer. I find joy and inspiration in every natural setting. I also have a passion for trying new things, whether it's experimenting with a new sport, learning a skill, or discovering unique experiences. Life is an adventure, and I'm always eager to embrace what it has to offer!
+        </ion-card-content>
       </ion-card>
     </div>
   </div>
-
-  <!-- Modal untuk detail informasi -->
-  <ion-modal #detailModal>
-    <ion-header>
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-button (click)="closeModal()">Close</ion-button>
-        </ion-buttons>
-        <ion-title>Detail Informasi</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-card>
-        <ion-img src="assets/img/H1D022040.jpeg"></ion-img>
-        <ion-card-header>
-          <ion-card-subtitle>{{ folder }}</ion-card-subtitle> <!-- Menampilkan folder -->
-          <ion-card-title>Informasi Lengkap</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <p>{{ detailInfo }}</p> <!-- Menampilkan detail informasi -->
-        </ion-card-content>
-      </ion-card>
-    </ion-content>
-  </ion-modal>
 </ion-content>
